--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@
 
 # Misc swap files, etc
 *.swp
+
+# Sunspot Solr Dev and log files
+solr/test
+solr/development
+solr/default/data
+/log/*.log.lck
