--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+/public/tmp/records/*
 
 # Ignore the database configuration yaml, which contains secret information
 /config/database.yml
