--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
-/public/tmp/records/*
+/public/tmp/records/*.mrc
+/public/tmp/records/*.xlsx
 
 # Ignore the database configuration yaml, which contains secret information
 /config/database.yml
