--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ rvm:
 script: "bundle exec rake"
 before_script:
   - cp config/database.travis.yml config/database.yml
+
+before_install:
+  - gem install bundler -v '= 1.5.1'
