--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -3,7 +3,7 @@ production:
     hostname: localhost
     port: 8983
     log_level: WARNING
-    path: /solr/production
+    path: /solr/collection1
     # read_timeout: 2
     # open_timeout: 0.5
 
