--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 rvm:
   - "2.1.0"
 
-script: "bundle exec rake"
+script:
+  - "RAILS_ENV=test bundle exec rake db:migrate --trace"
+  - "bundle exec rspec"
+
 before_script:
   - cp config/database.travis.yml config/database.yml
 
